@@ -1,10 +1,18 @@
 package nl.oradev.piclodio.util;
 
-import javax.sound.sampled.*;
+import javax.sound.sampled.AudioSystem;
+import javax.sound.sampled.BooleanControl;
+import javax.sound.sampled.CompoundControl;
+import javax.sound.sampled.Control;
 import javax.sound.sampled.Control.Type;
+import javax.sound.sampled.FloatControl;
+import javax.sound.sampled.Line;
+import javax.sound.sampled.LineUnavailableException;
+import javax.sound.sampled.Mixer;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class Audio {
 
@@ -150,7 +158,7 @@ public class Audio {
     public static List<Mixer> getMixers() {
         return Arrays.stream(AudioSystem.getMixerInfo())
                 .map(AudioSystem::getMixer)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static List<Line> getAvailableOutputLines(Mixer mixer) {
@@ -165,7 +173,7 @@ public class Audio {
         return Arrays.stream(lineInfos)
                 .map(lineInfo -> getLineIfAvailable(mixer, lineInfo))
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static Line getLineIfAvailable(Mixer mixer, Line.Info lineInfo) {
